--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello</title>
-</head>
-<body>
-    <h1>Hello</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Resenha - Validador de cupons</title>
+
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/vue-qrcode-reader@2.0.3/dist/vue-qrcode-reader.browser.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/vue-qrcode-reader@2.0.3/dist/vue-qrcode-reader.css"
+    />
+  </head>
+  <body>
+    <div class="" id="app">
+      <p>
+        Último código: <b>{{ decodedContent }}</b>
+      </p>
+
+      <p class="error">
+        {{ errorMessage }}
+      </p>
+
+      <qrcode-stream @decode="onDecode" @init="onInit"></qrcode-stream>
+    </div>
+  </body>
+  <script>
+    new Vue({
+      el: "#app",
+
+      data() {
+        return {
+          decodedContent: "",
+          errorMessage: ""
+        };
+      },
+
+      methods: {
+        onDecode(content) {
+          this.decodedContent = content;
+        },
+
+        onInit(promise) {
+          promise
+            .then(() => {
+              console.log("Successfully initilized! Ready for scanning now!");
+            })
+            .catch(error => {
+              if (error.name === "NotAllowedError") {
+                this.errorMessage = "Hey! I need access to your camera";
+              } else if (error.name === "NotFoundError") {
+                this.errorMessage = "Do you even have a camera on your device?";
+              } else if (error.name === "NotSupportedError") {
+                this.errorMessage =
+                  "Seems like this page is served in non-secure context (HTTPS, localhost or file://)";
+              } else if (error.name === "NotReadableError") {
+                this.errorMessage =
+                  "Couldn't access your camera. Is it already in use?";
+              } else if ("OverconstrainedError") {
+                this.errorMessage =
+                  "Constraints don't match any installed camera. Did you asked for the front camera although there is none?";
+              } else {
+                this.errorMessage = "UNKNOWN ERROR: " + error.message;
+              }
+            });
+        }
+      }
+    });
+  </script>
 </html>
